--- a/site/web/index.html
+++ b/site/web/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Dart HTML5 Demo App</title>
+    <title>Solvr</title>
     
     <link rel="import" href="solvr-site.html">
     
