basic UI framework now works

--- a/site/lib/src/site-frame.html
+++ b/site/lib/src/site-frame.html
@@ -1,6 +1,6 @@
-<!DOCTYPE html>
+<link rel="import" href="../../packages/solvr_ui/src/components/ui-horizontal-list.html">
 
-<polymer-element name="solvr-site-frame">
+<polymer-element name="site-frame">
   <template>
     <p>Hello Solvr</p>
     <ui-horizontal-list>
@@ -12,5 +12,5 @@
       @import url('styles/devices.css');
     </style>
   </template>
-  <script type="application/dart" src="solvr_site_frame.dart"></script>
+  <script type="application/dart" src="site_frame.dart"></script>
 </polymer-element>
