--- a/site/web/index.html
+++ b/site/web/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Solvr</title>
     
-    <link rel="import" href="app/solvr-site-frame.html">
+    <link rel="import" href="../lib/src/site-frame.html">
     
     <script type="application/dart">export 'package:polymer/init.dart';</script>
     <script src="packages/browser/dart.js"></script>
@@ -11,6 +11,6 @@
     </style>
   </head>
   <body>
-    <solvr-site-frame></solvr-site-frame>
+    <site-frame></site-frame>
   </body>
 </html>
